# powertools-oas-validator

./: .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
powertools_oas_validator/: exceptions.py  middleware.py  types.py
powertools_oas_validator/overrides/: __init__.py  unmarshallers.py  validators.py
powertools_oas_validator/services/: error_handler.py  event_parser.py  request_validator.py  spec_loader.py  spec_parser.py  spec_validator.py
tests/: conftest.py  test_middleware.py  test_types.py
tests/files/: event.py  oas-invalid.yaml  oas-valid-body-enum.yaml  oas-valid-parameters.yaml  oas-valid-security.yaml  oas-valid.yaml
tests/services/: test_error_handler.py  test_event_parser.py  test_request_validator.py  test_spec_loader.py  test_spec_validator.py
